med-dg: second draft

--- a/myblog/posts/sr/med-dg/biblio.bib
+++ b/myblog/posts/sr/med-dg/biblio.bib
@@ -51,3 +51,20 @@
 	note = {PMID: 4697645},
 	langid = {eng}
 }
+
+@article{krogsbøll2019,
+	title = {General health checks in adults for reducing morbidity and mortality from disease},
+	author = {{Krogsbøll}, Lasse T. and {Jørgensen}, Karsten Juhl and {Gøtzsche}, Peter C.},
+	year = {2019},
+	month = {01},
+	date = {2019-01-31},
+	journal = {The Cochrane Database of Systematic Reviews},
+	pages = {CD009009},
+	volume = {1},
+	number = {1},
+	doi = {10.1002/14651858.CD009009.pub3},
+	note = {48 citations (Crossref) [2023-08-21]
+PMID: 30699470
+PMCID: PMC6353639},
+	langid = {eng}
+}
