--- a/talks/posts/sr/01_nedelja_vezbe/index.qmd
+++ b/talks/posts/sr/01_nedelja_vezbe/index.qmd
@@ -7,6 +7,7 @@ date: last-modified
 date-format: D/MM/YYYY
 lang: hr
 language: "../language-sr-Latn.yml"
+draft: true
 ---
 
 # Uvod
@@ -14,4 +15,3 @@ language: "../language-sr-Latn.yml"
 # Praktično
 
 # Zadaci
-
