--- a/index.qmd
+++ b/index.qmd
@@ -23,6 +23,10 @@ about:
     #   href: uploads/resume.pdf
 ---
 
+```{=html}
+<script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="ngrubor" data-color="#FFDD00" data-emoji="☕"  data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
+```
+\
 Nikola Grubor is a Ph.D. student of Medical Statistics and Bioinformatics at the Belgrade Medical School Institute for Medical Statistics and Bioinformatics. His research interests include Bayesian Modeling, Causal Inference, and Metascience.
 
 ## Education
